--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="icon" href="assets/imagens/iconi.png">
 </head>
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script> 
     <header>
         <div class="container">
             <img src="assets/imagens/logotipo.png" alt="Logotipo" width="200px" height="50px">
@@ -17,13 +27,14 @@
         <div class="container">
             <nav class="menu">
                 <ul>
-                    <a href="jogos1.html">Jogos</a>
+                    <a href="Game.html">Jogos</a>
                     <a href="#">Loja</a>
                     <a href="#">Página</a>
-                    <a href="#">Perfil</a>
+                    <a href="Login.html">Login</a>
                 </ul>
             </nav>
-        </div>
+        </div>      
+         
     </header>
 </body>
 </html>
